<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="loan_calculator_header_text">Loan Calculator</string>
    <string name="with_extra_payments_text">with extra payments</string>
    <string name="loan_amount_field_hint">Loan amount</string>
    <string name="interest_rate_field_hint">Interest rate, %</string>
    <string name="term_field_hint">Term</string>
    <string name="in_months_radio_button_text">months</string>
    <string name="years_radio_button_text">years</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="monthly_payment_header_text">Monthly payment:</string>
    <string name="overpayment_header_text">Total overpayment (interest)</string>
    <string name="if_extra_payments_header_text">With extra payments</string>
    <string name="hint_add_extra_payment_text">Add extra payments in the amortization schedule</string>
    <string name="reset_all_extra_payments_text">Reset all extra payments</string>
    <string name="extra_payment_header_text">Extra payment</string>
    <string name="for_payment_header_text">For payment</string>
    <string name="extra_payment_amount_hint">Extra payment amount</string>
    <string name="choose_extra_payment_type_header_text">Choose extra payment type strategy</string>
    <string name="decrease_term_type_text">Decrease loan term</string>
    <string name="decrease_payment_amount_type_text">Decrease monthly payment amount</string>
    <string name="add_extra_payment_text">extra payment</string>
    <string name="add_extra_payment_button_text">Add</string>
    <string name="cancel_extra_payment_button_text">Cancel</string>
    <string name="reset_extra_payment_button_text">Reset</string>
    <string name="for_payment_number_text">For payment №</string>
    <string name="balance_table_column_text">Loan balance</string>
    <string name="interest_table_column_text">Interest</string>
    <string name="principal_table_column_text">Principal</string>
    <string name="payment_amount_table_column_text">Payment</string>
    <string name="repeat_in_next_months_text">Repeat in next months</string>
    <string name="until_the_end_of_the_term_radio_text">Until the end of the term</string>
    <string name="until_specific_month_radio_text">Until a specific month</string>
    <string name="max_term_in_months_message">The max possible term is</string>
    <string name="choose_month">Choose month</string>
    <string name="reduce_payment_amount_brief">DP</string>
    <string name="reduce_term_brief">RT</string>
    <string name="reduce_term_description">RT - Reduction of term</string>
    <string name="decrease_amount_of_payment_description">DP - Decrease in the amount of payment</string>
    <string name="enter_loan_name_text">Enter the name of the loan</string>
    <string name="save_loan_button_text">Save</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="delete_loan_dialog_text">Are you sure you want to delete the loan?</string>
    <string name="saved_loans_text">Saved loans</string>
    <string name="my_loan_text">My loan</string>
    <string name="enter_first_payment_date">Enter first payment date (optional)</string>
    <string name="date_table_column_text">Date</string>
    <string name="one_year_postfix">year</string>
    <string name="years_postfix">years</string>
    <string name="for_term_prefix">for</string>
    <string name="one_month_postfix">month</string>
    <string name="months_postfix">months</string>
    <string name="already_paid_text">Already paid</string>
    <string name="already_paid_principal">Principal:</string>
    <string name="already_paid_interest">Interest:</string>
    <string name="disable_ads_text">Disable ads</string>
    <string name="title_activity_f_a_q">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="faq_1_question_formula">What formula (algorithm) is used to calculate loan amortization schedule?</string>
    <string name="faq_1_answer_formula">The formula for calculating the payment amount is shown below.</string>
    <string name="faq_1_answer_where">where</string>
    <string name="faq_1_answer_where_detail">
        - A = payment Amount per period\n
        - P = initial Principal (loan amount)\n
        - r = interest rate per period\n
        - n = total number of payments or periods</string>
    <string name="faq_1_answer_warning">* The calculation may differ depending on the conditions of a particular bank.</string>
</resources>