<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FAQActivity"
    tools:showIn="@layout/activity_f_a_q">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/faq_1_question_formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/bold_font"
            android:text="@string/faq_1_question_formula"
            android:textColor="@color/coolDarkColor"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/faq_1_answer_formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/base_font"
            android:text="@string/faq_1_answer_formula"
            android:textColor="@color/coolDarkColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faq_1_question_formula" />

        <ImageView
            android:id="@+id/formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/payment_amount_formula"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faq_1_answer_formula" />

        <TextView
            android:id="@+id/faq_1_answer_where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/base_font"
            android:text="@string/faq_1_answer_where"
            android:textColor="@color/coolDarkColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/faq_1_answer_formula"
            app:layout_constraintTop_toBottomOf="@+id/formula" />

        <TextView
            android:id="@+id/faq_1_answer_where_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/base_font"
            android:text="@string/faq_1_answer_where_detail"
            android:textColor="@color/coolDarkColor"
            android:textSize="14sp"
            android:lines="4"
            android:maxLines="5"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/faq_1_answer_where"
            app:layout_constraintTop_toBottomOf="@+id/faq_1_answer_where" />

        <TextView
            android:id="@+id/faq_1_answer_warning"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/base_font"
            android:text="@string/faq_1_answer_warning"
            android:textColor="@color/coolDarkColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faq_1_answer_where_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>