<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CreditHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/loan_calculator_header_text"
        android:textColor="#333333"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/EarlyHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/with_extra_payments_text"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/CreditHeader" />

    <EditText
        android:id="@+id/loanAmount"
        android:layout_width="224dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/base_font"
        android:hint="@string/loan_amount_field_hint"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:paddingLeft="3dp"
        android:textColor="@color/coolDarkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EarlyHeader"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/calc"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:background="@drawable/calc_button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/calculate_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#333333"
        android:textSize="14sp"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term"
        app:layout_constraintVertical_bias="0.296" />

    <EditText
        android:id="@+id/term"
        android:layout_width="224dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/base_font"
        android:hint="@string/term_field_hint"
        android:inputType="number"
        android:maxLength="3"
        android:paddingLeft="3dp"
        android:textColor="@color/coolDarkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestRate"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="224dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/base_font"
        android:hint="@string/interest_rate_field_hint"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:paddingLeft="3dp"
        android:textColor="@color/coolDarkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanAmount"
        app:layout_constraintVertical_bias="0.025" />

    <RadioGroup
        android:id="@+id/termType"
        android:layout_width="222dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term"
        app:layout_constraintVertical_bias="0.13999999">

        <RadioButton
            android:id="@+id/monthTermType"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:buttonTint="@color/coolDarkColor"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/in_months_radio_button_text"
            android:textColor="#333333"
            android:textCursorDrawable="@drawable/calc_button" />

        <RadioButton
            android:id="@+id/yearTermType"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:buttonTint="@color/coolDarkColor"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/years_radio_button_text"
            android:textColor="#333333" />

    </RadioGroup>

    <Spinner
        android:id="@+id/savedLoans"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@drawable/saved_loans_background"
        android:longClickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/turnOffAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="163dp"
        android:fontFamily="@font/base_font"
        android:text="Отключить рекламу"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/base_font"
        android:text="FAQ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/turnOffAds"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="41dp"
        android:layout_height="43dp"
        android:background="@drawable/calendar_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toEndOf="@+id/loanAmount"
        app:layout_constraintTop_toTopOf="@+id/loanAmount"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>